# voip-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cutter.py  cutter.spec  installer.iss  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  release.yml
.mimocode/: .cron-lock
config/: config.json
docs/: ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  PLUGINS.md
src/: __init__.py  app.py  composition.py  config.py  main.py
src/database/: __init__.py  connection.py  repository.py
src/enrichment/: __init__.py  abuseipdb.py  base.py  ipqualityscore.py  manager.py  shodan.py  virustotal.py
src/export/: __init__.py  base.py  csv_exporter.py  excel_exporter.py  html_exporter.py  json_exporter.py  markdown_exporter.py  pdf_exporter.py
src/models/: __init__.py  ip_info.py  packet.py  session.py
src/plugins/: __init__.py  base.py  generic.py  manager.py  meet.py  signal.py  telegram.py  whatsapp.py
src/services/: __init__.py  capturer.py  ip_intel.py  network_analyzer.py
src/ui/: __init__.py  dialogs.py  main_window.py  theme.py
src/utils/: __init__.py  concurrency.py  errors.py  http.py  validation.py
tests/: test_composition.py  test_config.py  test_database.py  test_enrichment.py  test_export.py  test_export_extra.py  test_ip_intel.py  test_plugins.py  test_utils.py
